feature.index.html

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </section>
 
     <!--Footer-->
-
+    <a href="index.html">WebStudio</a>
     <footer id="Contacts"></footer>
     <p>
       Web Studio Increase the flow of customers and sales for your business with
