--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
   </head>
-  <body>
+
     <!--Top line-->
 
     <header>
       <nav>
         <a href="./index.html"> WebStudio</a>
         <ul>
-          <li><a href="#Studio">Studio</a></li>
-          <li><a href="#Portfolio">Portfolio</a></li>
-          <li><a href="#Contacts">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
 
@@ -122,7 +122,7 @@
               alt="Photo_Mark Guerrero"
               width="264"
             />
-            <h4>Mark Guerrero</h4>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -131,7 +131,7 @@
               alt="Photo_Tom Ford"
               width="264"
             />
-            <h4>Tom Ford</h4>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -140,7 +140,7 @@
               alt="Photo_Camila Garcia"
               width="264"
             />
-            <h4>Camila Garcia</h4>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -149,22 +149,23 @@
               alt="Photo_Daniel Wilson"
               width="264"
             />
-            <h4>Daniel Wilson</h4>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <!--Footer-->
+    
+   
+  </body>
+   <!--Footer-->
     <section>
       <footer>
         <a href="index.html">WebStudio</a>
-
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
       </footer>
     </section>
-  </body>
 </html>
