--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
       <nav>
         <a href="./index.html"> WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li>
+            <a href="">Studio</a>
+          </li>
+          <li>
+            <a href="">Portfolio</a>
+          </li>
+          <li>
+            <a href="">Contacts</a>
+          </li>
         </ul>
       </nav>
 
@@ -35,7 +41,7 @@
       <address id="Contacts">
         <ul>
           <li><a href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
-          <li><a href="tel:+11(000)1111111"> +11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -155,12 +161,10 @@
         </ul>
       </section>
     </main>
-    
-   
   </body>
    <!--Footer-->
     <section>
-      <footer>
+        <footer>
         <a href="index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
