--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
   </head>
-
+  <body>
     <!--Top line-->
 
     <header>
@@ -162,10 +162,10 @@
       </section>
     </main>
 
-   <!--Footer-->
+    <!--Footer-->
 
     <section>
-        <footer>
+      <footer>
         <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
@@ -173,5 +173,5 @@
         </p>
       </footer>
     </section>
-      </body>
+  </body>
 </html>
